--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "mcp": "node dist/index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@notionhq/client": "^4.0.1",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "zod": "^3.25.76"
   },
