--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "mcp": "node dist/index.js"
+    "mcp": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "author": "",
   "license": "MIT",
@@ -21,6 +25,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^24.0.15",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
